--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-checker": "^0.6.2",
     "vite-tsconfig-paths": "^4.2.3"
   }
 }
