--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-organize-attributes"],
+  "attributeGroups": ["^class$", "^(id|name)$", "$DEFAULT", "^aria-"]
 }
