--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
+    "prettier-plugin-organize-attributes": "^1.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-checker": "^0.6.2",
